SERVER-24711 properly timeout asio connections

ASIO Connections that have already timed out before setup now result
in timeouts instead of invariants.

(cherry picked from commit 587afac9ca7ff084aeb8bf74e98ecb9688b3afdb)