src/mongo/executor/network_interface_asio.h
@@ -226,6 +226,7 @@ private:
      */
     class AsyncOp {
         friend class NetworkInterfaceASIO;
+        friend class connection_pool_asio::ASIOConnection;
 
     public:
         AsyncOp(NetworkInterfaceASIO* net,
